added new translations

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -104,8 +104,8 @@
     "selectSize": "Select the size",
     "addInBasket": "Add in basket",
     "additionalInformation": "Additional information",
-    "productsAddedInBasket": "Products added in basket",
-    "productsAddedInFavourites": "Product added in favourites",
+    "productAddedInBasket": "Product added in basket",
+    "productAddedInFavourites": "Product added in favourites",
     "recommended": "Recommended",
     "totalPrice": "Total price",
     "transportation": "Transportation",
@@ -117,5 +117,32 @@
     "productRemovedFromFavourites": "Product successfully removed from the favourites",
     "addressSuccessfullyAdded": "Address successfully added",
     "moreThanThree": "More than three addresses can not be added",
-    "correctEmail": "Please, add correct mail"
+    "correctEmail": "Please, add correct mail",
+    "country": "Country",
+    "enterNewPassword": "Enter new password",
+    "addressSuccessfullyUpdated": "Address successfully updated",
+    "favourite": "Favourite",
+    "enterCorrectInfo": "Enter correct information",
+    "emailSuccessfullySent": "Email successfully sent",
+    "cart": "Cart",
+    "deliveryAddress": "Please choose delivery address",
+    "couldntAddAddress": "Couldn't add address",
+    "errorOccured": "Error, please try again later",
+    "infoSent": "Info successfuly sent",
+    "pleaseTryAgain": "Please try again",
+    "unfinished": "Unfinished",
+    "total": "Total",
+    "hours": "Hours",
+    "passwordSuccessfullyUpdated": "Password successfully updated",
+    "main": "Main",
+    "myProfile": "My profile",
+    "myCart": "My Cart",
+    "product": "Product",
+    "quantity": "Quantity",
+    "toAdd": "Please register to add to cart",
+    "toAddFavourites": "Please register to add to favourites",
+    "pleaseChoose": "Please choose size and color",
+    "sales": "Sales",
+    "products": "Products",
+    "newly": "New added"
 }
