--- a/public/locales/ge/translation.json
+++ b/public/locales/ge/translation.json
@@ -55,7 +55,7 @@
     "mobile": "მობ. ნომერი",
     "repeatPassword": "გაიმეორე პაროლი",
     "agree": "ვეთანხმები წესებსა და პირობებს",
-    "registrationUnavailable": "რეგისტრაცია ვერ მოხერხდა. შეიყვანეთ სწორი მონაცემები",
+    "registrationUnavailable": "რეგისტრაცია ვერ მოხერხდა",
     "all": "ყველა",
     "popular": "პოპულარობა",
     "rating": "რეიტინგი",
@@ -73,7 +73,7 @@
     "remove": "გასუფთავება",
     "select": "არჩევა",
     "profile": "პროფილი",
-    "registrationDate": "რეგისტრაციია დრო:",
+    "registrationDate": "რეგისტრაციია დრო",
     "logOut": "გასვლა",
     "personalInformation": "პირადი ინფორმაცია",
     "address": "მისამართი",
@@ -86,8 +86,8 @@
     "city": "ქალაქი",
     "georgia": "საქართველო",
     "region": "რეგიონი / რაიონი",
-    "zipCode": "ZIP კოდი (ქართულად: საფოსტო კოდი უნდა იყოს)",
-    "receiver": "მიმების სახელი და გვარი",
+    "zipCode": "საფოსტო კოდი",
+    "receiver": "მიმღების სახელი და გვარი",
     "add": "დამატება",
     "purchaseHistory": "ყიდვის ისტორია",
     "confirmed": "დადასტურებული",
@@ -104,8 +104,8 @@
     "selectSize": "აირჩიე ზომა",
     "addInBasket": "კალათაში დამატება",
     "additionalInformation": "დამატებითი ინფორმაცია",
-    "productsAddedInBasket": "პროდუქტი დაემატა კალათაში",
-    "productsAddedInFavourites": "პროდუქტი დაემატა ფავორიტებში",
+    "productAddedInBasket": "პროდუქტი დაემატა კალათაში",
+    "productAddedInFavourites": "პროდუქტი დაემატა ფავორიტებში",
     "recommended": "რეკომენდირებული",
     "totalPrice": "სრული ღირებულება",
     "transportation": "ტრანსპორტირება",
@@ -117,5 +117,32 @@
     "productRemovedFromFavourites": "პროდუქტი წარმატებით წაიშალა ფავორიტებიდან",
     "addressSuccessfullyAdded": "მისამართი წარმატებით დაემატა",
     "moreThanThree": "სამზე მეტი მისამართის დამატება არ არის შესაძლებელი",
-    "correctEmail": "გთხოვთ, შეიყვანოთ სწორი მეილი."
+    "correctEmail": "გთხოვთ, შეიყვანოთ სწორი მეილი.",
+    "country": "ქვეყანა",
+    "enterNewPassword": "შეიყვანეთ ახალი პაროლი",
+    "addressSuccessfullyUpdated": "მისამართი წარმატებით განახლდა",
+    "favourite": "რჩეული",
+    "enterCorrectInfo": "შეიყვანეთ სწორი მონაცემები",
+    "emailSuccessfullySent": "იმეილი წარმატებით გაიგზავნა",
+    "cart": "კალათა",
+    "deliveryAddress": "გთხოვთ, დაამატოთ მიტანის მისამართი",
+    "couldntAddAddress": "ვერ მოხერხდა მისამართის დამატება",
+    "errorOccured": "მოხდა შეცდომა. გთხოვთ, სცადოთ მოგვიანებით",
+    "infoSent": "ინფორმაცია წარმატებით გაიგზავნა",
+    "pleaseTryAgain": "გთხოვთ სცადოთ თავიდან",
+    "unfinished": "დაუსრულებელი",
+    "total": "თანხა",
+    "hours": "საათი",
+    "passwordSuccessfullyUpdated": "პაროლი წარმატებით განახლდა",
+    "main": "მთავარი",
+    "myProfile": "ჩემი პროფილი",
+    "myCart": "ჩემი კალათა",
+    "product": "პროდუქტი",
+    "quantity": "რაოდენობა",
+    "toAdd": "კალათაში დასამატებლად, გთხოვთ დარეგისტრირდეთ",
+    "toAddFavourites": "ფავორიტებში დასამატებლად, გთხოვთ დარეგისტრირდეთ",
+    "pleaseChoose": "გთხოვთ, აირჩიეთ ზომა და ფერი",
+    "sales": "ფასდაკლებები",
+    "products": "პროდუქტი",
+    "newly": "ახალდამატებული"
 }
