--- a/public/locales/ge/translation.json
+++ b/public/locales/ge/translation.json
@@ -144,5 +144,6 @@
     "pleaseChoose": "გთხოვთ, აირჩიეთ ზომა და ფერი",
     "sales": "ფასდაკლებები",
     "products": "პროდუქტი",
-    "newly": "ახალდამატებული"
+    "newly": "ახალდამატებული",
+    "searchResults": "ძებნის შედეგები"
 }
