--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -144,6 +144,6 @@
     "pleaseChoose": "Please choose size and color",
     "sales": "Sales",
     "products": "Products",
-    "newly": "New added",
+    "newly": "New",
     "searchResults": "Search results"
 }
