--- a/public/locales/ge/translation.json
+++ b/public/locales/ge/translation.json
@@ -145,5 +145,7 @@
     "sales": "ფასდაკლებები",
     "products": "პროდუქტი",
     "newly": "ახალდამატებული",
-    "searchResults": "ძებნის შედეგები"
+    "searchResults": "ძებნის შედეგები",
+    "goBack": "უკან დაბრუნება",
+    "status": "სტატუსი"
 }
