--- a/public/locales/ge/translation.json
+++ b/public/locales/ge/translation.json
@@ -52,7 +52,7 @@
     "addCredentials": "შეიყვანეთ თქვენი მონაცემები",
     "name": "სახელი",
     "surname": "გვარი",
-    "mobile": "მობ. ნომერი",
+    "mobile": "მობ. ნომერი(+995)",
     "repeatPassword": "გაიმეორე პაროლი",
     "agree": "ვეთანხმები წესებსა და პირობებს",
     "registrationUnavailable": "რეგისტრაცია ვერ მოხერხდა",
@@ -147,5 +147,8 @@
     "newly": "ახალდამატებული",
     "searchResults": "ძებნის შედეგები",
     "goBack": "უკან დაბრუნება",
-    "status": "სტატუსი"
+    "status": "სტატუსი",
+    "pleaseCheck": "გთხოვთ შეამოწმოთ ელ-ფოსტა, სადაც გამოგზავნილია ერთჯერადი ლინკი, რის მეშვეობითაც აღადგენთ პაროლს",
+    "successfullySent": "პაროლის აღდგენის ლინკი წარმატებით გაიგზავნა",
+    "backMain": "მთავარზე დაბრუნება"
 }
