--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -142,7 +142,7 @@
     "toAdd": "Please register to add to cart",
     "toAddFavourites": "Please register to add to favourites",
     "pleaseChoose": "Please choose size and color",
-    "sales": "Sales",
+    "discount": "Discount",
     "products": "Products",
     "newly": "New",
     "searchResults": "Search results",
