--- a/public/locales/ge/translation.json
+++ b/public/locales/ge/translation.json
@@ -142,7 +142,7 @@
     "toAdd": "კალათაში დასამატებლად, გთხოვთ დარეგისტრირდეთ",
     "toAddFavourites": "ფავორიტებში დასამატებლად, გთხოვთ დარეგისტრირდეთ",
     "pleaseChoose": "გთხოვთ, აირჩიეთ ზომა და ფერი",
-    "sales": "ფასდაკლებები",
+    "discount": "ფასდაკლება",
     "products": "პროდუქტი",
     "newly": "ახალდამატებული",
     "searchResults": "ძებნის შედეგები",
