--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -150,5 +150,7 @@
     "status": "Status",
     "pleaseCheck": "Please check your e-mail, we've sent you the password reset link",
     "successfullySent": "Password reset link sent successfully",
-    "backMain": "Go back"
+    "backMain": "Go back",
+    "changePassword": "Change password",
+    "mobilePhone": "Mobile phone"
 }
