--- a/public/locales/ge/translation.json
+++ b/public/locales/ge/translation.json
@@ -150,5 +150,7 @@
     "status": "სტატუსი",
     "pleaseCheck": "გთხოვთ შეამოწმოთ ელ-ფოსტა, სადაც გამოგზავნილია ერთჯერადი ლინკი, რის მეშვეობითაც აღადგენთ პაროლს",
     "successfullySent": "პაროლის აღდგენის ლინკი წარმატებით გაიგზავნა",
-    "backMain": "მთავარზე დაბრუნება"
+    "backMain": "მთავარზე დაბრუნება",
+    "changePassword": "პაროლის შეცვლა",
+    "mobilePhone": "მობილური ტელეფონი"
 }
