--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -102,9 +102,9 @@
     "removeFromFavourites": "Remove from favourites",
     "seen": "seen",
     "selectSize": "Select the size",
-    "addInBasket": "Add in basket",
+    "addInBasket": "Add to cart",
     "additionalInformation": "Additional information",
-    "productAddedInBasket": "Product added in basket",
+    "productAddedInBasket": "Product added in cart",
     "productAddedInFavourites": "Product added in favourites",
     "recommended": "Recommended",
     "totalPrice": "Total price",
@@ -113,7 +113,7 @@
     "goToCheckout": "Go to checkout",
     "oldPassword": "Old password",
     "newPassword": "New password",
-    "productRemovedFromBasket": "Product successfully removed from the basket",
+    "productRemovedFromBasket": "Product successfully removed from the cart",
     "productRemovedFromFavourites": "Product successfully removed from the favourites",
     "addressSuccessfullyAdded": "Address successfully added",
     "moreThanThree": "More than three addresses can not be added",
